--- a/app/globals.css
+++ b/app/globals.css
@@ -163,3 +163,31 @@
     }
   }
 }
+
+/* custom scroll */
+/* ===== DNA sequence custom scrollbar ===== */
+.seq-scroll::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+.seq-scroll::-webkit-scrollbar-track {
+  background: #000;
+  border-radius: 10px;
+}
+
+.seq-scroll::-webkit-scrollbar-thumb {
+  background: #b5b5b5;
+  border-radius: 10px;
+}
+
+.seq-scroll::-webkit-scrollbar-thumb:hover {
+  background: #ffffff;
+}
+
+/* Firefox */
+.seq-scroll {
+  scrollbar-width: thin;
+  scrollbar-color: #b5b5b5 #000;
+}
+
