--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,13 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
+  color-scheme: light dark;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  
   --background: #0d1117;
   --foreground: #e0e0e0;
   --card: #161b22;
@@ -72,6 +79,12 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(0.269 0 0);
   --sidebar-ring: oklch(0.439 0 0);
+}
+
+html{
+  scroll-behavior: smooth;
+  
+  
 }
 
 @theme inline {
